--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cffi==1.14.3
 click==7.1.2
 dnspython==2.0.0
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
